--- a/src/components/dashboardcomponents/PortfolioCard.css
+++ b/src/components/dashboardcomponents/PortfolioCard.css
@@ -1,10 +1,11 @@
 /* container */
 .card {
   background: #ffffff;
-  border-radius: 16px;
+  border-radius: 0px;
   box-shadow: 0 6px 20px rgba(0,0,0,0.06);
   padding: 16px;
-  width: 720px;
+  width: 670px;
+  height: 220px;
   font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, sans-serif;
 }
 
